--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,12 @@
     "test:e2e:auth": "jest --config ./test/jest-e2e.json auth.e2e-spec.ts --runInBand",
     "test:e2e:products": "jest --config ./test/jest-e2e.json products.e2e-spec.ts --runInBand",
     "test:e2e:generations": "jest --config ./test/jest-e2e.json generations.e2e-spec.ts --runInBand",
-    "test:all": "npm run test && npm run test:e2e"
+    "test:all": "npm run test && npm run test:e2e",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "typeorm:generate": "npm run typeorm -- migration:generate -d src/config/typeorm.config.ts",
+    "typeorm:create": "npm run typeorm -- migration:create",
+    "typeorm:run": "npm run typeorm -- migration:run -d src/config/typeorm.config.ts",
+    "typeorm:revert": "npm run typeorm -- migration:revert -d src/config/typeorm.config.ts"
   },
   "dependencies": {
     "@langchain/core": "^1.0.5",
@@ -32,17 +37,19 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.1.9",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "multer": "^2.0.2",
     "openai": "^6.9.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sharp": "^0.34.5",
     "typeorm": "^0.3.27"
   },
   "devDependencies": {
@@ -54,6 +61,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
