--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "clsx": "^2.1.1",
     "next": "16.0.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
